# cff-in-the-wild

./: .gitignore  CITATION.cff  README.md
code/analysis/R/: DESCRIPTION  NAMESPACE
code/analysis/R/R/: fetch_repo_infos.R
code/analysis/R/man/: fetch_repo_infos.Rd
code/analysis/R/scripts/: get_all_repo_info.R
code/analysis/python/: pyproject.toml
code/analysis/python/python/: calculate_stats.py  read_cff_files.py  scp_compliance.py  write_summary_stats.py
code/analysis/python/tests/: test_calculate_stats.py
code/data-preparation/: create_dataset.py
code/data-retrieval/: requests_based_retrieve.py
code/plot_cff_analysis/: plot_summery.ipynb
code/repo-checker/: rclib.py  repo-checker-report.ipynb
data/: cff_repositories.csv  repo_infos.csv
data/analysed/: cff_versions.csv  cffinit.csv  file_counts.csv
data/raw/: DO_NOT_PUSH_THIS.md
data/test/: broken_CFF_CITATION.cff  broken_YAML_CITATION.cff
